--- a/style.css
+++ b/style.css
@@ -31,3 +31,22 @@ background-color: #000000;
 li{
 background-color: white;
 }
+ul {
+ list-style-type: square;
+ background: #3399ff;
+ padding: 15px;
+}
+ol {
+ list-style-type: square;
+ background: #f29c07;
+ padding: 15px;
+}
+ol {
+ background: #045200;
+ padding: 15px;
+}
+ol li {
+ background: #f29c07;
+ padding: 5px;
+ margin: 5px 0 0 35px;
+}
